force-app/main/default/objects/MUSW__GIS_Map_Setting__mdt/MUSW__GIS_Map_Setting__mdt.object-meta.xml
<CustomObject>
    <label>GIS Map Setting</label>
    <pluralLabel>GIS Map Settings</pluralLabel>
</CustomObject>