force-app/main/default/objects/MUSW__GIS_Map_Setting__mdt/fields/MUSW__Basemap_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Basemap_Type__c</fullName>
    <description>Basemap layer type, like &quot;Tile&quot; or &quot;Dynamic&quot;</description>
    <inlineHelpText>Please select the type of basemap layer, if a basemap url is being provided.</inlineHelpText>
    <label>Basemap Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
                <default>true</default>
                <label>Tile</label>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>