force-app/main/default/objects/MUSW__GIS_Map_Setting__mdt/fields/MUSW__Basemap_Url__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Basemap_Url__c</fullName>
    <description>Basemap url, or it will use topographic basemap by default</description>
    <inlineHelpText>Provide basemap url, or it will use topographic basemap by default</inlineHelpText>
    <label>Basemap Url</label>
    <type>Url</type>
</CustomField>