force-app/main/default/objects/MUSW__GIS_Map_Setting__mdt/fields/MUSW__Center_Point_Latitude__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Center_Point_Latitude__c</fullName>
    <description>Geolocation for the default center point for the map to zoom to</description>
    <inlineHelpText>Please provide geolocation latitude (upto 2 decimal points) for the default center point for the map to zoom to. This is required only when webmap is not being used.
Example: 49.28</inlineHelpText>
    <label>Center Point Latitude</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>