force-app/main/default/objects/MUSW__GIS_Map_Setting__mdt/fields/MUSW__Center_Point_Longitude__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Center_Point_Longitude__c</fullName>
    <description>Default geolocation longitude for the center point for the map to zoom to.</description>
    <inlineHelpText>Please provide geolocation longitude (upto 2 decimal points) for the default center point for the map to zoom to. This is required only when webmap is not being used.
Example: -123.13</inlineHelpText>
    <label>Center Point Longitude</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>