force-app/main/default/objects/MUSW__GIS_Map_Setting__mdt/fields/MUSW__Public_Access__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Public_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Basemap is publicly accessible</description>
    <inlineHelpText>Setting this true means this basemap service and its layers should have public access in the GIS Server as well as in Salesforce</inlineHelpText>
    <label>Public Access</label>
    <type>Checkbox</type>
</CustomField>