force-app/main/default/objects/MUSW__GIS_Map_Setting__mdt/fields/MUSW__Rest_Settings_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Rest_Settings_Record_Name__c</fullName>
    <description>Name of the Rest Settings record which contains the map authentication details, like app/user login credentials and Token url (if any). When not provided, the system will skip authentication to the GIS System and assume the resources are public..</description>
    <inlineHelpText>Provide name of the Rest Settings record which contains the map authentication details, like app/user login credentials and Token url (if any). When not provided, the system will skip authentication to the GIS System and assume the resources are public.</inlineHelpText>
    <label>Rest Settings Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>