force-app/main/default/objects/MUSW__GIS_Map_Setting__mdt/fields/MUSW__Route_Url__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Route_Url__c</fullName>
    <description>Url to the routing service</description>
    <inlineHelpText>Provide the Url to the routing service, if any available for ArcGIS Server.</inlineHelpText>
    <label>Route Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>