force-app/main/default/objects/MUSW__GIS_Map_Setting__mdt/fields/MUSW__Webmap_Id__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Webmap_Id__c</fullName>
    <description>Provide Webmap Id if using arcgis online, if not provided map will render the Topographic basemap by default</description>
    <inlineHelpText>Provide Webmap Id if using arcgis online, if not provided map will render the Topographic basemap by default</inlineHelpText>
    <label>Webmap Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>