force-app/main/default/objects/MUSW__GIS_Map_Setting__mdt/fields/MUSW__Zoom_Level__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Zoom_Level__c</fullName>
    <description>Default zoom level for the map on load</description>
    <inlineHelpText>Please provide the default zoom level for the map on load.  This is required only when webmap is not being used.
Example: 14</inlineHelpText>
    <label>Zoom Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>